<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:id="@id/linearLayout01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideH90"
        app:layout_constraintStart_toStartOf="@+id/guideH10"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon_dog_face" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideH90"
        app:layout_constraintStart_toStartOf="@+id/guideH10"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout01">

        <TextView
            android:id="@+id/text_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/register"
            android:textColor="@color/principal"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideH90"
        app:layout_constraintStart_toStartOf="@+id/guideH10"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout02">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_register"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_email"
            style="@style/TextViewError"
            android:text="@string/error_email" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_register"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_user"
            style="@style/TextViewError"
            android:text="@string/error_user" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dni_register"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/dni"
                android:inputType="number"
                android:maxLength="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_password"
            style="@style/TextViewError"
            android:text="@string/error_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_register"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_coincidence"
            style="@style/TextViewError"
            android:text="@string/error_coincidence" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/principal"
            android:text="@string/join_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>
