<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ImageProfileCircle"
                app:srcCompat="@drawable/photo_profile" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/username"
                    style="@style/TextView16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/user_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    style="@style/TextView16sp"
                    android:text="@string/hour"
                    android:textColor="@color/gray"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/content_post"
                style="@style/TextView16sp"
                android:text="@string/content"
                tools:ignore="VisualLintLongText" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_post"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ImageViewCorner"
                app:srcCompat="@drawable/photo_profile"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>