<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notice.CreateFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextView16sp"
            android:layout_marginBottom="20dp"
            android:text="@string/new_post"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ImageProfileCircle"
                    app:srcCompat="@drawable/photo_profile" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/username"
                        style="@style/TextView16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/content"
                    style="@style/EditTextStyle"
                    android:hint="@string/express_here"
                    android:maxLength="400"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:shapeAppearanceOverlay="@style/ImageViewCorner"
                    app:srcCompat="@drawable/photo_profile"
                    tools:ignore="ImageContrastCheck" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/upload_image"
                    style="@style/ImageIconPost"
                    android:layout_gravity="start"
                    android:layout_marginVertical="10dp"
                    app:srcCompat="@drawable/icon_image"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_save"
            style="@style/ButtonStyleProfile"
            android:layout_weight="0"
            android:layout_width="140dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/post" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>